tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage-1.stderr
error[E0277]: the trait bound `Trait::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-1.rs:16:44
   |
LL | fn unqualified<T: const Trait>() -> Type<{ T::Assoc::func() }> {
   |                                            ^^^^^^^^ the trait `Compat` is not implemented for `Trait::{synthetic#0}`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-1.rs:8:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function

error[E0277]: the trait bound `Trait::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-1.rs:20:42
   |
LL | fn qualified<T: const Trait>() -> Type<{ <T as Trait>::Assoc::func() }> {
   |                                          ^^^^^^^^^^^^^^^^^^^ the trait `Compat` is not implemented for `Trait::{synthetic#0}`
   |
note: required by a bound in `Trait::func`
  --> $DIR/assoc-type-const-bound-usage-1.rs:8:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Trait::func`
...
LL |     fn func() -> i32;
   |        ---- required by a bound in this associated function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
